# log-parser

./: .gitignore  README.md  license.md  logparser.py  parser.py  pyproject.toml  regex.py
data/: error.regex  log.regex  log4.txt
logparser/: logparser.py
src/: clparser.py
src/logparser/: io.py  logparselib.py  logparser.py  thezen.py
