[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logparser"
version = "0.0.1"
description = "A small CLI tool to parse unstructured logfiles into either csv or json files"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
logparser = "clparser:main"